--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,66 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+    <data>
+        <variable
+            name="main"
+            type="com.example.tiennguyen.luanvannew.MainActivity"
+            />
+    </data>
     <LinearLayout
-        android:id="@+id/full_screen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
-        android:orientation="vertical">
-    </LinearLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
-
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_above="@+id/llPlayerCollapse" />
+        android:orientation="vertical"
+        >
         <LinearLayout
-            android:id="@+id/fragment_container_second"
+            android:id="@+id/full_screen_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:visibility="gone"
-            android:layout_above="@+id/llPlayerCollapse">
+            android:orientation="vertical">
         </LinearLayout>
 
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+
+            <LinearLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_above="@+id/llPlayerCollapse" />
+            <LinearLayout
+                android:id="@+id/fragment_container_second"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_above="@+id/llPlayerCollapse">
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/llPlayerCollapse"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/player_collapse_height_50dp"
+                android:orientation="vertical"
+                android:visibility="gone"
+                android:layout_alignParentBottom="true"/>
+
+
+        </RelativeLayout>
+
+
         <LinearLayout
-            android:id="@+id/llPlayerCollapse"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/player_collapse_height_50dp"
-            android:orientation="vertical"
-            android:visibility="gone"
-            android:layout_alignParentBottom="true"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/bg_bottom_nav">
 
+            <android.support.design.widget.BottomNavigationView
+                android:id="@+id/bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                app:itemIconTint="@drawable/handle_state"
+                app:itemTextColor="@drawable/handle_title"
+                app:menu="@menu/bottom_navigation">
 
-    </RelativeLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/bg_bottom_nav">
-
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            app:itemIconTint="@drawable/handle_state"
-            app:itemTextColor="@drawable/handle_title"
-            app:menu="@menu/bottom_navigation">
-
-        </android.support.design.widget.BottomNavigationView>
+            </android.support.design.widget.BottomNavigationView>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
