--- a/app/src/main/res/layout/fm_search.xml
+++ b/app/src/main/res/layout/fm_search.xml
@@ -164,8 +164,8 @@
             </LinearLayout>
         </ScrollView>
 
-        <LinearLayout
-            android:id="@+id/llSearchingLayout"
+        <ScrollView
+            android:id="@+id/svSearchingLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -178,33 +178,33 @@
                     android:id="@+id/pbSearchingLoading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <LinearLayout
                     android:id="@+id/llSearching"
                     android:layout_width="304dp"
                     android:layout_height="453dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginTop="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginRight="8dp"
-                    app:layout_constraintRight_toRightOf="parent"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="8dp"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    android:orientation="vertical">
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rcSearchingList"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                        android:layout_height="match_parent" />
 
                 </LinearLayout>
 
             </android.support.constraint.ConstraintLayout>
-        </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 </RelativeLayout>
